working on search options on top search bar
Former-commit-id: 8681bc0016c06808d69d379a20560613e41d7fa8 [formerly 1b4ca3a9d555e5ecb6a62923149ea2f94b0ce8db] [formerly 888ae74e450bddc4a6fc3fb98811810ffec4f30b [formerly 37c5b6c62ccd033dd2901928d5bc23929929aefe]]
Former-commit-id: e4fe0fcca8ce3055c80e7019ac7a40e80b2d8835 [formerly e09662f401621b8f6081605d82e5e1b0501ddae2]
Former-commit-id: 9cc433ef839aadf6065615c6a2571490d3d37481

--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -111,7 +111,7 @@
             <div class="col-md-9">
                 <div class="row">
                    <div class="showPage slimForm col-md-12 margin-bottom-15" style="padding:5px; padding-top:25px">
-                      <div class="col-md-6">
+                      <div class="" ng-show="$root.iogrowSearch"  ng-class="$root.linkedSearch==true ? 'col-md-6' :'col-md-12' ">
                         <div class="news-blocks ">                        
                           <h3 style="font-size: 21px;margin-top: 0px;">
                            <img src="static/img/sm-iogrow.png" style="height: 20px;margin-right: 5px;">
@@ -123,7 +123,7 @@
                         </ul>
                        </div>
                       </div>
-                      <div class="col-md-6">
+                      <div ng-show="$root.linkedSearch" ng-class=" $root.iogrowSearch==true ? 'col-md-6' :'col-md-12' ">
                         <div class="news-blocks blank-card ">
                           
                           <h3 style="font-size: 21px;margin-top: 0px;"><i class="fa fa-linkedin-square" style=" font-size: 21px; color: rgb(27, 133, 189); vertical-align: baseline; margin-right: 5px;"></i>LinkedIn Results</h3>
