--- a/templates/base.html
+++ b/templates/base.html
@@ -165,7 +165,11 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       <div id="navbarSearch">
         <form id="navbarSearchForm"  ng-controller="SearchFormController" class="navbar-form ng-pristine ng-valid " ng-submit="executeSearch(searchQuery)" role="search">
               <div class="form-group">
-                <input type="text" ng-model="searchQuery" typeahead="result as result.title + ' (' + result.type + ')' for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="form-control" placeholder="{{_('Search')}}">
+                <div style="position: absolute;width: 55px; margin-top: 5px; margin-left: 3px;">
+                    <img id="iogrowSearchIcon" ng-click="iogrowSearchSwitch()" src="static/img/sm-iogrow.png" style="height: 20px;margin-right: 3px;">
+                     <i ng-class="{linkedInSelected: linkedSearch ==true}" class="fa fa-linkedin-square" style=" font-size: 20px; vertical-align: baseline;color: rgb(195, 195, 195);  /* margin-right: -1px; */ top: 3px; position: absolute;" ng-click="linkedinSearchSwitch()"></i>
+                </div>
+                <input type="text" ng-model="searchQuery" typeahead="result as result.title + ' (' + result.type + ')' for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="form-control" placeholder="{{_('Search')}}" style="padding-left: 51px;">
               </div>
                <button class="gbqfb gbqfb-hvr"><span class="gbqfi"></span></button>
         </form>
