CHange on Contact show page html
Former-commit-id: 90d8f5ba849a9c799266d1bc66bb7c5d70ae54f3 [formerly 27bee22b5c736801fdcd59db2cdf9a9c83470247] [formerly 9893a36590542ccf75a0470a6a61e86cdda2418b [formerly b4ea51751cc871fcdf7d4f4382801348eb4af23a]]
Former-commit-id: bc4c40160ea1eadc900919a736236605c4d6f05d [formerly aa043377b776e699ff8866e1bcad43f7f8a669a0]
Former-commit-id: 4499d30aa98eb7accad3a703f53d19c6cff1a8f6

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1304,7 +1304,7 @@
                                       <div class="news-blocks blank-card blank-card-yellow newsCard" ng-show="linkedProfile.headline||linkedProfile.locality||linkedProfile.industry||linkedProfile.relation">
                                                 <h3>{{_('Contact Informations from Linkedin')}}</h3>
                                                 <div class="news-block-tags">
-                                                    <strong>{{_('profission')}}</strong>
+                                                    <strong>{{_('profession')}}</strong>
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
                                                     <li>
