show number of followers , and check the server to start listing results
Former-commit-id: ce678345b7e5a0d96a3722726ab12acec68d1402 [formerly a97322040df952d66037306c17f7be1b9b359577] [formerly 4fe9446b004c22309e993b516d330357a8a516f7 [formerly 0682377febd932287d65c04391ee59d15e71af5b]]
Former-commit-id: 887bf0b19d4ba89abbb5006edfaae10389945209 [formerly 626f4987c6b215e0969e384fd4849fc4aec24236]
Former-commit-id: 8949470038b6f7094cc0b4abb1b65b5b8ec1992c

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -238,6 +238,11 @@
                    <a href="/#/discovers/show/<%= tweet._source.id %>*" target="new" class="profile-link">
                       <%= tweet._source.user.name %>
                    </a>
+                  
+                <span  class="contact-title followers_nb" >
+                  <%=tweet._source.user.followers_count%> followers
+                </span>
+        
                 </div>
                 
               </div>
