--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -70,15 +70,19 @@ _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-{%if user %}
+if (window.location.host != "localhost")
+{
+  {%if user %}
     console.log('1');
     ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
     ga('send', 'pageview');
-{% else %}
-    console.log('2');
-    ga('create', 'UA-52188380-1', 'auto');
-    ga('send', 'pageview');
-{% endif %}
+  {% else %}
+        console.log('2');
+        ga('create', 'UA-52188380-1', 'auto');
+        ga('send', 'pageview');
+  {% endif %}
+}
+
 
 </script>
 <!-- End Google Analytics -->
