--- a/templates/new_web_site/sign-up.html
+++ b/templates/new_web_site/sign-up.html
@@ -22,15 +22,18 @@
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-{%if user %}
-    console.log('1');
-    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
-    ga('send', 'pageview');
-{% else %}
-    console.log('2');
-    ga('create', 'UA-52188380-1', 'auto');
-    ga('send', 'pageview');
-{% endif %}
+if (window.location.host != "localhost")
+{
+  {%if user %}
+      console.log('1');
+      ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+      ga('send', 'pageview');
+  {% else %}
+      console.log('2');
+      ga('create', 'UA-52188380-1', 'auto');
+      ga('send', 'pageview');
+  {% endif %}
+}
 
 </script>
   </head>
