--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -525,14 +525,26 @@
             </div>
           </div>
           <div class="portlet-body">
-            <ul class="list-group tags-list" id="slimList">
+            <ul class="list-group tags-list relatedTags" id="slimList">
               <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  ng-drag="dragTag(tag_item)" >
                 <div class="row">
-                  <span  editable-text="tag_item.name" draggable class="with-color" ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
+                <div class="with-color" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;display: inline-block;float: left;" >
+                <a href="" ng-click="deleteTag(tag_item)" class="removeRelatedTag select2-search-choice-close" ng-hide="hideCheckBox"></a> 
+                  <span  editable-text="tag_item.name" draggable  ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" 
                     ng-model='tag_item.name'   onhide="hideEditable()" onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                       <%= tag_item.name %>
                   </span>
-                <input type="checkbox" ng-show="(tag_item!=edited_tag)&&(!manage_tags)" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
+                  </div>
+            <!--     <input type="checkbox" ng-show="(tag_item!=edited_tag)&&(!manage_tags)" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()"> -->
+
+             <div class="customCheckbox CustomSmallCheck pull-right" ng-hide="hideCheckBox">  
+              <input ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="isSelected()"  class="checkbox" id="accountTag_<%=$index%>"  ng-click="selectTag(tag_item,$index,$event)" >             
+              <label for="accountTag_<%=$index%>" class="labelElement">
+                <span class="check"></span>
+                <span class="box"></span>
+              </label>  
+          </div>
+
                   <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                     <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
                   </form>
@@ -540,35 +552,37 @@
                 </div>
               </li>
             </ul>
-            <li class="list-group-item tags-list-item" style="border:none;margin-bottom:5px;" ng-hide="showNewTag" ng-click="showNewTag=true">
+   <!--          <li class="list-group-item tags-list-item" style="border:none;margin-bottom:5px;" ng-hide="showNewTag" ng-click="showNewTag=true">
                 <a ng-click="" class="btn-link addAnotherPhone">
                   <i class="fa fa-tags"></i>  {{_('Add a new label')}}
                 </a>
-           </li>
-            <form class="well newTagForm" role="form" ng-show="showNewTag">
-              <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
-              <div class="row">
-                <div class="col-md-12 form-group">
-                  <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{_('New label')}}">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-8">
-                  <ul class="color_pallet_menu">
-                    <li ng-repeat="color in color_pallet" ng-click="checkColor(color)" class="color-<%=color.name%>" ng-class='{colorChecked: color.name==tag.color.name}' >
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-md-4">
-                  <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
-                </div>
-              </div>
-            </form>
-            <div class="form-group btn-manage-tags" ng-show="tags">
+           </li> -->
+     <form class=" newTagForm" role="form" >
+       <!--    <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button> -->
+          <div class="row">
+            <div class="col-md-12 form-group">
+
+              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New Topic')}}">
+
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <ul class="color_pallet_menu">
+                <li ng-repeat="color in color_pallet" ng-click="checkColor(color)" class="color-<%=color.name%>" ng-class='{colorChecked: color.name==tag.color.name}' >
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
+            </div>
+          </div>
+        </form>
+        <!--     <div class="form-group btn-manage-tags" ng-show="tags">
               <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">
               {{_('Manage Tags')}}
               </button>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
