--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -23,8 +23,8 @@
           <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Tweets')}} 
            </span>
           
-         <!--  <span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
-           -->
+          <span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
+          
           <!-- <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span -->
           
           
@@ -169,54 +169,71 @@
 
 
 
-        <div  droppable ng-repeat="influencer in influencers_list" ng-show="influencersshow" id="card_<%=$index%>"class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
+        <div  droppable ng-repeat="tweet in influencers_list" ng-show="influencersshow" id="card_<%=$index%>"class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
        
-          <div class="detailsSection">
+          
+
+
+                 <div class="detailsSection">
              <div class="head">
+             
               <div class="pic">
-                      <a href="/#/discovers/show/<%= influencer.idp %>*" ng-click="details_of_tweets(influencer.id)"   target="new" class="startup-link" title="account.name">
+                      <a href="/#/discovers/show/<%= tweet.idp %>*" ng-click="details_of_tweets(tweet.idp)"   target="new" class="startup-link" title="account.name">
                 
-                          <img href="/#/discovers/show/<%= influencer.idp %>*" ng-click="details_of_tweets(influencer.id)" target="new" class="img-responsive profile-photo" src="<%=influencer.profile_image_url %>">
+                          <img href="/#/discovers/show/<%= tweet.idp %>*" ng-show="tweet._source.user.profile_image_url" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet._source.user.profile_image_url %>">
                       </a>
               </div>
               <div class="text">
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
 
-                   <a href="/#/discovers/show/<%= influencer.idp %>*" target="new" class="profile-link">
-                      <%= influencer.name %>
+                   <a href="/#/discovers/show/<%= tweet._source.id %>*" target="new" class="profile-link">
+                      <%= tweet._source.user.name %>
                    </a>
+                  
+                <span  class="contact-title followers_nb" >
+                  <%=tweet._source.user.followers_count%> followers
+                </span>
+        
                 </div>
                 
               </div>
           </div> 
           <div class="textbody">
               <div class="pitch">
-              Description: 
-                <span class="contact-title">
-                   <%= influencer.description %>
-
-                </span>
-             
+                <a href="/#/discovers/show/<%= tweet._source.id %>" target="new"  >
+                <p  class="contact-title"> <%=tweet._source.user.description%>
+                </p>
+              </a>
               </div>
-              <div class="pitch">
-                Number of followers: 
+           <!--    <div class="pitch">
                 <span  class="contact-title" >
-                  <%= influencer.followers_count%>
+                  <%=fromNow(tweet._source.created_at)%>
                 </span>
-              </div>
+              </div> -->
          
               <div class="clearfix"></div>
           </div>
           </div>
-         
+          <div class="actions-section">
+             
+              <div class="iogrow-actions pull-left">
+                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet._source)"><i class="fa fa-road "></i> Mark as lead</a>
+              </div>
+              <div class="clearfix"></div>
+            </div>
           <div class="tagsSection" ng-class="{hidden: lead.tags==null}">
             <div class="sectionContent">
               <a ng-repeat="tag in lead.tags" href="/#/search/type:Lead tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
               </a>
             </div>
           </div>
+
+
+
         </div>
+
+
 
 
         
